--- a/webproj/app/templates/albumInfo.html
+++ b/webproj/app/templates/albumInfo.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h2>{{ title }}.</h2>
-    <img src="{{ image }}" height="60" width="60">
+<img src="{{ image }}">
 
 <p>Use this area to provide additional information.</p>
 
