--- a/webproj/app/templates/index.html
+++ b/webproj/app/templates/index.html
@@ -2,8 +2,46 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h1 align="center">Welcome to <font style="font-family: 'Righteous', cursive;">{{ title }}</font></h1>
+<h5 align="center">Your Music Hub.</h5>
+<br>
+<div id="indexSlider" class="carousel slide" data-ride="carousel" align="center">
+    <ol class="carousel-indicators">
+        <li data-target="#indexSlider" data-slide-to="0"></li>
+        <li data-target="#indexSlider" data-slide-to="1"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="active item">
+          <img class="d-block w-100" src="http://cdn1.theodysseyonline.com/files/2016/01/04/6358748036944186621892622963_music.jpg" alt="First slide">
+        </div>
+        <div class="item">
+          <img class="d-block w-100" src="http://northfieldartsguild.org/_file/Music.jpg" alt="Second slide">
+        </div>
+        <div class="item">
+          <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/12/01/07/30/music-1874621_960_720.jpg" alt="Third slide">
+        </div>
+    </div>
+    <a class="left carousel-control" href="#indexSlider" role="button" data-slide="prev" style="background: none !important;">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#indexSlider" role="button" data-slide="next" style="background: none !important;">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+</div>
+
+<div class="row">
+    <div class="col-lg-4">
+        <h2>TOP Artists</h2>
+    </div>
+    <div class="col-lg-4">
+        <h2>TOP Músicas</h2>
+    </div>
+    <div class="col-lg-4">
+        <h2>TOP Categorias</h2>
+    </div>
+</div>
 
 <p>Use this area to provide additional information.</p>
 
