--- a/webproj/app/templates/top.html
+++ b/webproj/app/templates/top.html
@@ -1,37 +1,28 @@
 {% extends "layout.html" %}
 
 {% block content %}
+    {{ title }}
+
     <table class="table table-striped table-hover ">
-    <br>
-    <div align=center>
-        Categories
-        <select>
-          <option value="rap">Rap</option>
-          <option value="disco">Disco</option>
-          <option value="jazz">Jazz</option>
-        </select>
-    </div>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Artist</th>
-      <th>Album</th>
-      <th>MBID</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% csrf_token %}
-      {% for x in array %}
-          <tr>
-              <td></td>
-              <td>{{ x.1 }}</td>
-              <td><img src="{{ x.3 }}" height="60" width="60"> <b>{{ x.0 }}</b></td>
-              <td>{{ x.2 }}</td>
-          </tr>
-      {% endfor %}
-
-
+      <thead>
+        <tr>
+          <th></th>
+          <th>Artist</th>
+          <th>Album</th>
+          <th>MBID</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% csrf_token %}
+          {% for x in array %}
+              <tr>
+                  <td></td>
+                  <td>{{ x.1 }}</td>
+                  <td><img src="{{ x.3 }}" height="60" width="60"> <b>{{ x.0 }}</b></td>
+                  <td>{{ x.2 }}</td>
+              </tr>
+          {% endfor %}
       </tbody>
-</table>
+    </table>
 
 {% endblock %}
