Album artistas, pagina artistas e top musicas

--- a/webproj/app/templates/layout.html
+++ b/webproj/app/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} - xPand - Music Hub</title>
+    <title>{{ title }}</title>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'content/bootstrap.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'content/site.css' %}" />
@@ -36,7 +36,7 @@
 {% block content %}{% endblock %}
         <hr/>
         <footer>
-            <p>&copy; {{ year }} - xPand</p>
+            <p></p>
         </footer>
     </div>
 
