--- a/webproj/app/templates/artistInfo.html
+++ b/webproj/app/templates/artistInfo.html
@@ -4,7 +4,6 @@
 
 <div class="tab-content">
   <hr id="home" class="tab-pane fade in active">
-      <hr>
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4 order-2">
@@ -33,7 +32,7 @@
             {% csrf_token %}
               {% for x in top5 %}
                   <br>
-                  <img class="img-rounded" src="{{ x.1 }}" height="84" width="84"> <a href="/albumInfo/{{ x.0 }}/{{ name }}"> {{ x.0 }}</a>
+                  <img class="img-rounded" src="{{ x.1 }}" height="84" width="84"> <a href="/album/{{ x.0 }}/{{ name }}"> {{ x.0 }}</a>
                   <br>
               {% endfor %}
                 </ul>
@@ -54,7 +53,7 @@
              {% csrf_token %}
               {% for x in similars %}
                   <br>
-                 <img class="img-circle" src="{{ x.1 }}" height="84" width="84"><a href="/artistInfo/{{ x.0 }}"> {{ x.0 }}</a></li>
+                 <img class="img-circle" src="{{ x.1 }}" height="84" width="84"><a href="/artist/{{ x.0 }}"> {{ x.0 }}</a></li>
                   <br>
               {% endfor %}
            </div>
