--- a/webproj/app/templates/index.html
+++ b/webproj/app/templates/index.html
@@ -1,48 +1,59 @@
 {% extends "layout.html" %}
 
+{% block slider %}
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="https://media.timeout.com/images/103279271/image.jpg">
+                <div class="carousel-caption">
+                    <h1>Welcome to <font style="font-family: 'Righteous', cursive;">{{ title }}</font></h1>
+                    <p class="lead">Your Music Hub.</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="https://media.timeout.com/images/103589433/image.jpg">
+                <div class="carousel-caption">
+                    <h1>Know more of your favorite artists</h1>
+                    <p class="lead">We collect the best information for you!</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="http://insider.ticketmaster.com/wp-content/uploads/iStock-502194833.jpg">
+                <div class="carousel-caption">
+                    <h1>Find out who's on top</h1>
+                    <p class="lead">The best artists, songs and albums</p>
+                </div>
+            </div>
+        </div>
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+    </div>
+{% endblock %}
+
 {% block content %}
-
-<h1 align="center">Welcome to <font style="font-family: 'Righteous', cursive;">{{ title }}</font></h1>
-<h5 align="center">Your Music Hub.</h5>
-<br>
-<div id="indexSlider" class="carousel slide" data-ride="carousel" align="center">
-    <ol class="carousel-indicators">
-        <li data-target="#indexSlider" data-slide-to="0"></li>
-        <li data-target="#indexSlider" data-slide-to="1"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="active item">
-          <img class="d-block w-100" src="http://cdn1.theodysseyonline.com/files/2016/01/04/6358748036944186621892622963_music.jpg" alt="First slide">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <h2>TOP Artists</h2>
+            </div>
+            <div class="col-sm-4">
+                <h2>TOP Tracks</h2>
+            </div>
+            <div class="col-sm-4">
+                <h2>TOP Tags</h2>
+            </div>
         </div>
-        <div class="item">
-          <img class="d-block w-100" src="http://northfieldartsguild.org/_file/Music.jpg" alt="Second slide">
-        </div>
-        <div class="item">
-          <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/12/01/07/30/music-1874621_960_720.jpg" alt="Third slide">
-        </div>
-    </div>
-    <a class="left carousel-control" href="#indexSlider" role="button" data-slide="prev" style="background: none !important;">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#indexSlider" role="button" data-slide="next" style="background: none !important;">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-</div>
 
-<div class="row">
-    <div class="col-lg-4">
-        <h2>TOP Artists</h2>
+        <p>Use this area to provide additional information.</p>
     </div>
-    <div class="col-lg-4">
-        <h2>TOP Músicas</h2>
-    </div>
-    <div class="col-lg-4">
-        <h2>TOP Categorias</h2>
-    </div>
-</div>
-
-<p>Use this area to provide additional information.</p>
 
 {% endblock %}
