--- a/webproj/app/templates/layout.html
+++ b/webproj/app/templates/layout.html
@@ -14,7 +14,7 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div class="navbar-header">
+            <div class="navbar-inner">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -35,8 +35,12 @@
         </div>
     </div>
 
+    {% block slider %}
+    {% endblock %}
+
     <div class="container body-content">
-{% block content %}{% endblock %}
+        {% block content %}
+        {% endblock %}
         <hr/>
         <footer>
             <p></p>
