Visual changes on artist and album. URLs changed, some bugs fixed on Artist and Album classes, and API scripts updated.

--- a/webproj/app/static/content/site.css
+++ b/webproj/app/static/content/site.css
@@ -68,3 +68,11 @@ input[type="checkbox"].input-validation-error {
     margin: auto;
     height: 450px;
 }
+
+/**/
+
+.panel-body {
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
