--- a/webproj/app/templates/layout.html
+++ b/webproj/app/templates/layout.html
@@ -27,7 +27,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="">News</a></li>
+                    <li><a href="{% url 'news' %}">News</a></li>
                     <li><a href="">Artists</a></li>
                     <li><a href="">Albums</a></li>
                     <li><a href="">Tracks</a></li>
