--- a/webproj/app/templates/top.html
+++ b/webproj/app/templates/top.html
@@ -1,24 +1,44 @@
 {% extends "layout.html" %}
 
 {% block content %}
-
-  <table class="table table-striped table-hover ">
+<div style="width:800px; margin:0 auto;">
+    <div class="container">
     <br>
-    <thead>
-      <tr>
-        <th></th>
-        <th>Artist</th>
-        <th>Album</th>
-      </tr>
-    </thead>
-    <tbody>
-        {% for x in array %}
-            <tr>
-                <td></td>
-                <td><a href="/artistInfo/{{ x.1 }}">{{ x.1 }}</a></td>
-                <td><img src="{{ x.3 }}" height="60" width="60"> <b><a href="/albumInfo/{{ x.0 }}/{{ x.1 }}" />{{ x.0 }}</b></td>
-            </tr>
-        {% endfor %}
-    </tbody>
-  </table>
+        <div class="row">
+            <div class="col-md">
+                <h1 align="center">Top Artists</h1>
+                <div class="container">
+                    <!--   INSERT FOR HERE   NEWS-->
+                    {% for x in tags %}
+                        <br>
+                        <h2>{{ x }}</h2>
+                        {% for dict in topArtists %}
+                            {% for y in dict %}
+                                {% if y.tag == x %}
+                                    <div class="row">
+                                        <div class="col-sm-2">
+                                            <a href="/artist/{{ y.name }}"><img class="img-circle" height="105" width="105" src="{{ y.image }}" alt=""></a>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <br><br>
+                                            <a href="/artist/{{ y.name }}"><h4 class="media-heading" style="color:black">{{ y.name }}</h4></a>
+                                        </div>
+                                        {% for z in y.topAlbums %}
+                                        <div class="col-sm-1">
+                                            <a href="/album/{{ y.name }}/{{ z.0 }}"><img class="img-rounded" height="75" width="75" src="{{ z.1 }}" alt="" title="{{ z.0 }}"></a>
+                                        </div>
+                                        <br>
+                                        {% endfor %}
+                                    </div>
+                                    <br>
+                                {% endif %}
+                            {% endfor %}
+                        {% endfor %}
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
