--- a/webproj/app/templates/layout.html
+++ b/webproj/app/templates/layout.html
@@ -36,9 +36,10 @@
                 {% include 'loginpartial.html' %}
 
                 <div class="col-sm-3 col-md-3 navbar-right">
-                    <form class="navbar-form" role="search">
+                    <form action='/search/' method="post" class="navbar-form" role="search">
+                        {% csrf_token %}
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search..." name="q">
+                            {{ form.searchCriteria }}
                             <div class="input-group-btn">
                                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                             </div>
